feat: Update template routes and fix links in HTML templates

--- a/project/templates/transcribe/from_url.html
+++ b/project/templates/transcribe/from_url.html
@@ -121,7 +121,7 @@
         </div>
 
         <div class="home">
-            <a href="/transcribe">
+            <a href="/transcribe/index">
                 <button class="homebutton">回首頁</button>
             </a>
         </div>
