--- a/project/templates/transcribe/local_audio.html
+++ b/project/templates/transcribe/local_audio.html
@@ -130,7 +130,7 @@
 
         </div>
         <div class="home"></div>
-        <a href="/transcribe">
+        <a href="/transcribe/index">
             <button class="homebutton">回首頁</button>
         </a>
         </div>
