--- a/project/templates/transcribe/from_url.html
+++ b/project/templates/transcribe/from_url.html
@@ -13,7 +13,7 @@
             }
 
             .container {
-                max-width: 600px;
+                max-width: 800px;
                 margin: 50px auto;
                 padding: 20px;
                 background-color: #fcf9de;
@@ -53,13 +53,20 @@
 
             .description {
                 margin-top: 30px;
-                font-size: 14px;
+                font-size: 18px;
                 color: #666;
                 line-height: 1.6;
             }
 
             .homebutton {
-                background-color: #8E6EF3;
+                outline: none;
+                font-size: 1rem;
+                color: rgb(87, 83, 83);
+                padding: 10px 20px;
+                border: 0;
+                border-bottom: 6px solid #e6a772;
+                border-radius: 5px;
+                background-color: #f9d53e;
             }
 
             p {
@@ -71,15 +78,15 @@
     </head>
 
     <body>
-        <h1>線上語音轉譯及摘要生成工具</h1>
+        <h1>第二步：貼上 YouTube 音訊連結</h1>
         <div class="container">
-            <h1>請在下方貼上您的 Youtube 連結</h1>
+            <h1>請在下方貼上您想轉譯的 Youtube 音訊連結</h1>
             <form id="youtube-form">
                 <input type="text" id="youtube-url-input" placeholder="在此處貼上連結...">
                 <button class="start" id="start-button" type="button">Start ➔</button>
 
                 <div class="description">
-                    <p>線上 Youtube 連結語音轉譯及摘要生成工具</p>
+                    <p>貼上連結後點擊上方 Start ➔ 按鈕來轉譯您的音訊檔案。</p>
                 </div>
             </form>
             <div id="result" style="margin-top: 20px;"></div>
@@ -87,7 +94,7 @@
 
         <div class="home">
             <a href="/transcribe/index">
-                <button class="homebutton">回首頁</button>
+                <button class="homebutton">回上一頁</button>
             </a>
         </div>
 
