新增local.html、from_url.html介面樣式

--- a/project/templates/transcribe/index.html
+++ b/project/templates/transcribe/index.html
@@ -46,8 +46,8 @@
             font-size: 100px;
             font-weight: bold;
             text-decoration: none;
-            background-color: #4A90E2;
             border-radius: 50%;
+            border: 6px solid #4A90E2
         }
 
         .introduction {
