--- a/project/static/css/main.css
+++ b/project/static/css/main.css
@@ -1,10 +1,40 @@
+body {
+    font-family: Arial, sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    background-color: white;
+}
+
+h1 {
+    color: #333;
+    margin-bottom: 20px;
+}
+
+p {
+    line-height: 1.6;
+    margin-bottom: 20px;
+}
+
+.container {
+    width: 100%;
+    /* 使內容框撐滿容器 */
+    max-width: 800px;
+    margin: 50px;
+    padding: 20px;
+    background-color: #fcf9de;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+}
+
 .progress-bar {
     width: 100%;
     height: 22px;
     background-color: #f0f0f0;
     border-radius: 10px;
     overflow: hidden;
-    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .progress-inner {
@@ -25,4 +55,59 @@
 
 #result {
     text-align: left;
+}
+
+input[type="text"] {
+    width: 90%;
+    padding: 15px;
+    margin-bottom: 20px;
+    border: 2px solid #3f52c9;
+    border-radius: 5px;
+    font-size: 16px;
+}
+
+button {
+    padding: 15px 30px;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.start {
+    background-color: #8793dd;
+}
+
+button:hover {
+    background-color: #d4004b;
+}
+
+.file-label {
+    padding: 15px 30px;
+    background-color: #8E6EF3;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.description {
+    margin-top: 30px;
+    font-size: 18px;
+    color: #666;
+    line-height: 1.6;
+}
+
+.homebutton {
+    margin-top: 20px;
+    outline: none;
+    font-size: 1rem;
+    color: rgb(87, 83, 83);
+    padding: 10px 20px;
+    border: 0;
+    border-bottom: 6px solid #e6a772;
+    border-radius: 5px;
+    background-color: #f9d53e;
 }
